2006-01-27  Roman Kennke  <kennke@aicas.com>

	* javax/swing/JLayeredPane.java
	(inserIndexForLayer): Fixed direction of search.

2006-01-27  Audrius Meskauskas  <AudriusA@Bioinformatics.org>

	* javax/swing/JTree.java (constructor): Put EXPANDED for the root 
	node into nodeStates.

2006-01-27  Roman Kennke  <kennke@aicas.com>

	* javax/swing/JLayeredPane.java
	(FRAME_CONTENT_LAYER): Made field final.
	(componentToLayer): Made field private.
	(rectCache): Removed field.
	(layers): Removed field.
	(JLayeredPane()): Removed initialization of removed fields.
	(getLayer): Rewritten to make use of client properties in
	JComponents and to be more straighforward.
	(static getLayer): Rewritten to make use of client properties in
	JComponents.
	(layerToRange): Removed method.
	(incrLayer): Removed method.
	(decrLayer): Removed method.
	(highestLayer): Rewritten to be more straightforward.
	(lowestLayer): Rewritten to be more straightforward.
	(getPosition): Rewritten to be more straightforward.
	(getComponentsInLayer): Rewritten to be more straightforward.
	(getComponentCountInLayer): Rewritten to be more straightforward.
	(getIndexOf): Rewritten to be more straightforward.
	(inserIndexForLayer): Rewritten to be more straightforward.
	(remove): Rewritten to be more straightforward.
	(setLayer): Rewritten to be more straightforward.
	(addImpl): Rewritten to be more straightforward.
	(putLayer): Rewritten to be more straightforward.

2006-01-27  Anthony Balkissoon  <abalkiss@redhat.com>

	* java/lang/Character.java:
	(offsetByCodePoints(CharSequence, int, int)): New API method.
	(offsetByCodePoints(char[], int, int, int, int)): Likewise.
	(toChars): Throw the Exception that the docs say we throw.
	(codePointAt): Fixed an off-by-one error in the bounds of the if 
	statement.
	* java/lang/String.java:
	(String(int[], int, int)): New API constructor.

2006-01-27  Lillian Angel  <langel@redhat.com>

	* javax/swing/text/DefaultStyledDocument.java